@@ -1,0 +1,6 @@
+#include <AppKit/NSMenuItem.h>
+
+@interface NSPopUpButtonCell : NSMenuItem
+{
+}
+@end
